# escansi_-_python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml  uv.toml
.github/: release.yml
.github/actions/build_and_publish/: action.yml  old_action.yml
.github/actions/publish/: action.yml  old_action.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  build_and_publish.yml  lint.yml  pr_from_versions_validation.yml  pr_to_main_validation.yml  publish.yml  publish_to_pypi.yml  publish_to_test_pypi.yml
.github/workflows/reference/: _old_build_and_publish.yml
src/escansi/: __init__.py  constants.py  py.typed  types.py  utils.py
