[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "escansi"
description = "Python library to easily create ANSI escape codes and add them to your text."
version = "0.3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Ricardo JRSM Vieira", email = "ricardojrsmvieira@gmail.com" }
]
maintainers = [
  { name = "Ricardo JRSM Vieira", email = "ricardojrsmvieira@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
    "Topic :: Terminals",
    "Typing :: Typed"
]
requires-python = ">=3.0"
dependencies = []


[project.urls]
Homepage = "https://github.com/ricardojrsmvieira/escansi"
Issues = "https://github.com/ricardojrsmvieira/escansi/issues"


[[tool.uv.index]]
name = "test_pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
