[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"


[project]
name = "escansi"
description = "Python library to easily create ANSI escape codes and add them to your text."
version = "0.3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Ricardo JRSM Vieira", email = "ricardojrsmvieira@gmail.com" }
]
maintainers = [
  { name = "Ricardo JRSM Vieira", email = "ricardojrsmvieira@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
    "Topic :: Terminals",
    "Typing :: Typed"
]
requires-python = ">=3.0"
dependencies = []


[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "ruff >= 0.0.17"
]
test = [
  "pytest"
]


[project.urls]
Homepage = "https://github.com/ricardojrsmvieira/escansi"
Issues = "https://github.com/ricardojrsmvieira/escansi/issues"
